--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -239,7 +239,8 @@
 <body>
     <div class="navbar sticky-top navbar-expand-lg">
       <div class="container-fluid ">
-        <a 
+<!--        <span></span> zahujarit v knopku account -->
+        <a
         href="{%url 'main' %}"
         class="navbar-brand mb-0">
           <img src="{% static 'motoex-logo-true.svg' %}" class="motoex-logo"/>
@@ -264,7 +265,7 @@
             <li class="nav-item active">
               <a href="{% url 'reviews' %}" class="nav-link"><p class="link-name">REVIEWS</p></a>
               <li class="nav-item active">
-                <a href="{% url 'register' %}" class="nav-link"><p class="link-name">ACCOUNT</p></a>
+                <a href="{% url 'register' %}" class="nav-link"><p class="link-name">{% if user.is_authenticated %} {{ request.user.username }} {% else %} LOGIN {% endif %}</p></a>
               </li>
             </li>
           </ul>
