login with google nearly fixed and reg_page style fixed

--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -157,9 +157,9 @@
         </div>
       </div>
 
-      <div class="input-button">
+      <!-- <div class="input-button">
         <button class="login-with-google">Login with Google</button>
-      </div>
+      </div> -->
     </div>
   </div>
 </body>
