navbar-urls-fixed

--- a/templates/account_page.html
+++ b/templates/account_page.html
@@ -207,12 +207,12 @@
         <div class="nav-buttons navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a href="{% url 'catalog' %}" class="nav-link"><p class="link-name">CATALOG</p></a>
+              <a href="{% url 'choose_vehicle' %}" class="nav-link"><p class="link-name">CATALOG</p></a>
             </li>
             <li class="nav-item active">
               <a href="{% url 'reviews' %}" class="nav-link"><p class="link-name">REVIEWS</p></a>
               <li class="nav-item active">
-                <a href="{% url 'register' %}" class="nav-link"><p class="link-name">ACCOUNT</p></a>
+                <a href="{% if request.user.is_authenticated %} {% url 'account' %} {% else %} {% url 'login' %} {% endif %}" class="nav-link"><p class="link-name">{% if user.is_authenticated %} {{ request.user.username }} {% else %} LOGIN {% endif %}</p></a>
               </li>
             </li>
           </ul>
