--- a/templates/choose_v_type.html
+++ b/templates/choose_v_type.html
@@ -188,12 +188,12 @@
         <div class="nav-buttons navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a href="{% url 'catalog' %}" class="nav-link"><p class="link-name">CATALOG</p></a>
+              <a href="{% url 'choose_vehicle' %}" class="nav-link"><p class="link-name">CATALOG</p></a>
             </li>
             <li class="nav-item active">
               <a href="{% url 'reviews' %}" class="nav-link"><p class="link-name">REVIEWS</p></a>
               <li class="nav-item active">
-                <a href="{% url 'register' %}" class="nav-link"><p class="link-name">ACCOUNT</p></a>
+                <a href="{% if request.user.is_authenticated %} {% url 'account' %} {% else %} {% url 'login' %} {% endif %}" class="nav-link"><p class="link-name">{% if user.is_authenticated %} {{ request.user.username }} {% else %} LOGIN {% endif %}</p></a>
               </li>
             </li>
           </ul>
@@ -212,7 +212,7 @@
 
           <div class="col-md d-flex">
             <div class="card flex-fill">
-              <a href="#" class="car-type-link">
+              <a href="{% url 'catalog' %}" class="car-type-link">
                 <img src="images/spec_vehicle.jpeg" class="card-img" alt="">
                 <p class="car-type">
                   SPECIALIZED VEHICLES
