--- a/templates/add_vehicle_page.html
+++ b/templates/add_vehicle_page.html
@@ -90,7 +90,7 @@
       <textarea placeholder="Description" class="input-area" required name="description"></textarea>
       <input type="number" step="0.000001" class="input-area" required name="lon" placeholder="Longitude">
       <input type="number" step="0.000001" class="input-area" required name="lat" placeholder="Latitude">
-      <select class="select-area" required name="type">
+      <select class="select-area" required name="_type">
         <option value="moto">Moto</option>
         <option value="commercial">Commercial</option>
         <option value="car">Car</option>
