--- a/templates/add_vehicle_page.html
+++ b/templates/add_vehicle_page.html
@@ -98,6 +98,7 @@
       </select>
       <input class="input-area" required name="engine" placeholder="Engine">
       <input class="input-area" required name="fuel_type" placeholder="Fuel Type">
+      <input class="input-area" required name="transmission" placeholder="Transmission">
       <input type="number" class="input-area" required name="year_of_prod" placeholder="Year of Production">
       <input class="input-area" required name="mileage" placeholder="Mileage">
       <input class="input-area" required name="hometown" placeholder="Hometown">
