--- a/templates/about_page.html
+++ b/templates/about_page.html
@@ -492,10 +492,12 @@
       });
 
         $(document).ready(function(){
+          let isWidthSmall = document.body.getBoundingClientRect().width < 700;
+
           $('.slider-for').slick({
             slidesToShow: 1,
             slidesToScroll: 1,
-            arrows: true,
+            arrows: !isWidthSmall,
             fade: true,
             asNavFor: '.slider-nav'
           });
